force-app/main/default/objects/custom_create299__c/custom_create299__c.object-meta.xml
<CustomObject>
    <label>Custom created object299</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects299</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>