force-app/main/default/objects/custom_create299__c/fields/custom_create_299field546__c.field-meta.xml
<CustomField>
    <fullName>custom_create_299field546__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 299field546</label>
    <type>Checkbox</type>
</CustomField>